# pi-agent-rl-toolkit

./: .gitignore  README.md  convert_tasks_pi.py  generate_tasks.py  generate_tasks_batch2.py  generate_tasks_batch3.py  pyproject.toml  synthetic_tasks.json
.prime/skills/train-with-environments/: SKILL.md
configs/eval/: pi-agent-baseline.toml
configs/rl/: pi-agent-30b-1000.toml  pi-agent-30b-continue-from-700.toml  pi-agent-30b-judge.toml  test-small.toml
environments/pi_agent_env/: README.md  pyproject.toml
environments/pi_agent_env/.prime/: .env-metadata.json
environments/pi_agent_env/pi_agent_env/: __init__.py  pi_agent_env.py  pi_agent_tasks.json
eval/: held_out_tasks.json  run_eval.py
scripts/: check_balance.sh  deploy.sh  full_pipeline.sh  monitor.sh  quick_test.sh
