[project]
name = "pi_agent_env"
version = "0.4.0"
description = "Pi Agent self-improvement RL environment for Prime Intellect verifiers"
tags = ["agent", "tool-use", "coding"]
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.0",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pi_agent_env/*.py", "pi_agent_env/*.json", "pyproject.toml"]
